--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,15 @@ h1 {
 
 }
 .listed-group-item{
-  border: 0;  
+  border: 0;
+  padding: 30px;  
   margin-top: 20px;
   margin-bottom: 20px;
+
+}
+a{
+  text-align: center;
+  padding-top:30px;
+  padding-bottom: 30px; 
 
 }
