--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,8 @@ p{
 h1 {
   font-size: 250%;
   text-align: left;
-    color: black;
+    color: white;
+ background-color:rgba(0,0,0,.6);   
 }
 .col-xs-2{
   font-size: 90%;
@@ -38,15 +39,8 @@ h1 {
 
 }
 .listed-group-item{
-  border: 0;
-  padding: 30px;  
+  border: 0;  
   margin-top: 20px;
   margin-bottom: 20px;
-
-}
-a{
-  text-align: center;
-  padding-top:30px;
-  padding-bottom: 30px; 
 
 }
