--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,10 @@ body {
     position: fixed; 
   top: 0; 
   left: 0; 
-  
   /* Preserve aspet ratio */
   min-width: 100%;
   min-height: 100%;
   background-image: url("../images/guiltycrown-1.jpg");
-    padding: 30px;
 }
 #bg {
   position: fixed; 
@@ -22,7 +20,6 @@ p{
   font-size: 350%;
   text-align: center;
     color: black;
-
 }
 h1 {
   font-size: 250%;
@@ -30,17 +27,13 @@ h1 {
     color: white;
  background-color:rgba(0,0,0,.6);   
 }
+.col-xs-10{
+ color: white;
+}
 .col-xs-2{
   font-size: 90%;
   text-align: left;
   color: black;
   padding-top: 30px;
   padding-bottom: 30px;
-
-}
-.listed-group-item{
-  border: 0;  
-  margin-top: 20px;
-  margin-bottom: 20px;
-
 }
