--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ body {
   min-width: 100%;
   min-height: 100%;
   background-image: url("../images/guiltycrown-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 #bg {
   position: fixed; 
