--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,12 @@ body {
   min-height: 100%;
 }
 p{
-  font-size: 350%;
+  font-size: 450%;
   text-align: center;
     color: black;
 }
 h1 {
-  font-size: 250%;
+  font-size: 300%;
   text-align: left;
     color: white;
  background-color:rgba(0,0,0,.6);   
@@ -38,4 +38,11 @@ h1 {
   color: black;
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.list-group-item{
+  border:0;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+
 }
