--- a/css/main2.css
+++ b/css/main2.css
@@ -6,13 +6,9 @@
 html, body {
   height: 100%;
 }
-
-h1 {
-  font-size: 90px;  
-  margin: 20px 0;
-  color: #505050;
+p{
+  padding: 10px;
 }
-
 body {
   font-family: helvetica, arial, sans-serif;
 }
@@ -45,59 +41,6 @@ section {
   position: fixed !important;
   top: 0;
 }
-
-#logo, #social {
-  position: absolute;
-  color: black;
-  z-index: 100;
-  transition: 1s;
-  line-height: 80px;
-}
-
-#logo {
-  left: -150px;
-  font-size: 25px;
-  background: #4a4a4a;
-  height: 65px;
-  line-height: 65px;
-  padding: 0 10px;
-  margin: 0;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bolder;
-}
-
-#social {
-  top: -7px;
-  right: -150px;
-  font-size: 35px;
-  z-index: 100; 
-  color: #4a4a4a;
-}
-
-#mainlogo {
-  font-size: 150px;
-  color: black;
-  display: inline-block;
-  padding: 35px;
-  position: absolute;
-  height: 225px;
-  line-height: 100px;
-  top: 50%;
-  margin-top: -180px;
-  left: 50%;
-  width: 600px;
-  text-align: center;
-  margin-left: -300px;
-  text-shadow: 1px 2px 1px #000;
-  box-shadow: 1px 2px 1px #000;
-}
-
-#mainsocial {
-  font-size: 35px;
-  line-height: 80px;
-}
-
 .right {
   position: relative;
   float: right;
