--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,16 @@ h1 {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 959px) {
+@media screen and (max-width: 460px) {
+body{
+  width: 100%;
+  height: 100%;
 
+}
+.col-xs-10{
+  width: 100%;
+}
+.col-xs-2{
+  width: 100%;
+}
 }
