--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ body {
   background-repeat: no-repeat;
 
 }
+button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"{
+  position: sticky;
+  
+}
 #bg {
   position: fixed; 
   top: 0; 
