--- a/css/main2.css
+++ b/css/main2.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
   -mox-box-sizing: border-box;
 }
+.navbar-static-top
+{
+position: fixed;
+width: 100%;
+}
+h1
+{
+padding-top: 30px;
+
+}
 
 html, body {
   height: 100%;
