--- a/css/main3.css
+++ b/css/main3.css
@@ -5,6 +5,12 @@ body > div {
 		margin: 50px auto;
 		text-align: center;
 	}
+    .navbar-static-top
+	{
+    position: fixed;
+    width:100%;
+    margin-top: -50px;
+	}
 	figure {
 		margin: 0;
 	}
@@ -49,7 +55,7 @@ body > div {
 		display: inline-block;
 		border-radius: 50%;
 		width: 30px;
-		padding-top: 7px;
+		padding-top:7px;
 		height: 23px;
 		font: .9em Arial;
 	}
@@ -62,13 +68,13 @@ body > div {
 		position: absolute;
 		left: -9999px;
 	}
-
 	input:checked + label {
 		font-weight: bold;
-		background: #ddd;
+		background: #ddd
 	}
 
-		input[value="1"]:checked ~ .container .carousel { -webkit-transform: translateZ(-540px); }
+
+		input[value="1"]:checked ~ .container .carousel { -webkit-transform: translateZ(-540px);S}
 		input[value="2"]:checked ~ .container .carousel { -webkit-transform: translateZ(-540px) rotateY(-45deg); }
 		input[value="3"]:checked ~ .container .carousel { -webkit-transform: translateZ(-540px) rotateY(-90deg); }
 		input[value="4"]:checked ~ .container .carousel { -webkit-transform: translateZ(-540px) rotateY(-135deg); }
