--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    position: fixed; 
+  position: fixed; 
   top: 0; 
   left: 0; 
   /* Preserve aspet ratio */
@@ -8,15 +8,20 @@ body {
   background-image: url("../images/guiltycrown-1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-
+  max-width: 100%;
 }
 .navbar-static-top
 {
-position: fixed;
-width: 100%;
-
+  max-width: 100%;
+  position: fixed;
+  width: 100%;
+}
+p
+{
+  max-width: 100%;
 }
 #bg {
+  max-width: 100%;
   position: fixed; 
   top: 0; 
   left: 0; 
@@ -26,7 +31,8 @@ width: 100%;
   min-height: 100%;
 }
 p{
-  padding: 35px;
+  max-width: 100%;
+  padding: 40px;
   font-size: 450%;
   text-align: center;
   color: black;
@@ -36,13 +42,16 @@ h1 {
   float: left;
   font-size: 300%;
   text-align: left;
-    color: white;
- background-color:rgba(0,0,0,.6);   
+  color: white;
+  background-color:rgba(0,0,0,.6);
+  max-width: 100%;   
 }
 .col-xs-10{
- color: white;
+  color: white;
+  max-width: 100%;
 }
 .col-xs-2{
+  max-width: 100%;
   font-size: 90%;
   text-align: left;
   color: black;
@@ -54,9 +63,27 @@ h1 {
   margin-top: 30px;
   margin-bottom: 30px;
   float: 30px;
+  max-width: 100%;
 }
-
-
-@media screen and (max-width: 320px) {
-
+@media screen and (max-width: 460px) {
+  p{
+  font-size: 250%;
+  width: 100%;
+}
+h1{
+  font-size: 165%;
+  width: 100%;
+}
+.listed-group-item{
+  width: 100%;
+}
+.row{
+  width: 100%;
+}
+.col-xs-10{
+  width: 100%;
+}
+.col-xs-2{
+  width: 100%;
+}
 }
