--- a/css/main2.css
+++ b/css/main2.css
@@ -91,6 +91,14 @@ img.right {
   color: white;
   transition: .3s;
 }
-.navbar-static-top{
-
+@media screen and (max-width: 460px) {
+  img.right {
+  width: 100%;
+}
+p{
+  font-size: 50%;
+  margin: 0;
+  margin-left: 0;
+  width: 100%;
+}
 }
