--- a/css/main2.css
+++ b/css/main2.css
@@ -10,7 +10,6 @@ width: 100%;
 h1
 {
 padding-top: 30px;
-
 }
 
 html, body {
@@ -21,6 +20,7 @@ p{
 }
 body {
   font-family: helvetica, arial, sans-serif;
+  background-color: #49EAF2;
 }
 
 section {
