--- a/css/main4.css
+++ b/css/main4.css
@@ -4,3 +4,11 @@
   position: fixed;
   width: 100%;
 }
+body{
+	background-color: #D16D08;
+}
+p{
+    text-align: center;
+    color: black;
+    float: center;
+}
